# mash

./: CMakeLists.txt  Grammar.md  Operations.md  README.md
src/: Collection1D.cpp  Collection1D.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Literal.cpp  Literal.h  MathUtil.h  Nodes.cpp  Nodes.h  Number.cpp  Number.h  Operations.cpp  Operations.h  Parser.cpp  Parser.h  Set.cpp  Set.h  Value.cpp  Value.h  Vector.cpp  Vector.h  main.cpp  main.h
tests/: TestOperators.cpp
